--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -107,5 +107,8 @@ header {
     margin: 0;
     margin-bottom: 15px;
   }
+  header {
+    height: 140px;
+  }
  }
 
